<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BMIActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Weight"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/weight"
        android:inputType="numberDecimal"
        android:hint="weight in kg"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="5dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Height"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="18dp"/>

    <EditText
        android:id="@+id/Feet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Feet"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/Inch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Inches"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="numberDecimal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Button"
        android:id="@+id/calculation"
        android:textColor="@color/white"
        android:background="@drawable/btn_bg"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Result"
        android:id="@+id/re_text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/result"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginLeft="10dp"

        />












</LinearLayout>