<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:weightSum="2"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="@color/background_color"
    tools:context=".SecondActivity">

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/FoodCardView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:clickable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_action_name"
                    android:background="@drawable/foodpurple"> </ImageView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/foodpurple"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Option1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginTop="3dp"/>


            </LinearLayout>



        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:id="@+id/BMICardView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:clickable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_action_bmi"
                    android:background="@drawable/bmi_color"> </ImageView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/bmi_color"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Option2"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginTop="3dp"/>


            </LinearLayout>



        </androidx.cardview.widget.CardView>






    </LinearLayout>

    <!--2nd linear layout-->

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/BMRCardView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:clickable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_action_bmi"
                    android:background="@drawable/bmr_color"> </ImageView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/bmr_color"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Option3"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginTop="3dp"/>


            </LinearLayout>



        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:id="@+id/CalorieCardView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:clickable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_action_bmi"
                    android:background="@drawable/fat_color"> </ImageView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/fat_color"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Option4"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginTop="3dp"/>


            </LinearLayout>



        </androidx.cardview.widget.CardView>





    </LinearLayout>



</LinearLayout>